@@ -1,2 +1,2 @@
 <!-- $Id$ -->
-<jwc id="link">[Show Inspector]</jwc>
+<jwc id="link"><jwc id="button"/></jwc>
